# secmap

./: .gitignore  CITATION.cff  LICENSE  README.md  afida_parser.py  cache_warmer.py  init.py  network_visualizer.py  pyproject.toml  report_generator.py  run_production.py  run_research.py  run_tests.py  show_afida.py
docs/: SCEMap - Market Analysis.md  SCEMap — System Block Diagram.md  SECMap — Architecture & Technical Reference.md  SECMap — Concept of Operations (CONOPS).md  SECMap — Network Visualizer.md  SECMap — Report Generator.md  SECMap — Software Design Document (SDD).md  SECMap — Software Requirements Specification (SRS).md  SECMap — System Architecture Document (SAD).md
src/secmap/: adversarial_search.py  adversarial_xbrl.py  cik_discovery.py  cli.py  config.py  csv_writer.py  descension.py  entity_classification.py  entity_extraction.py  exhibit21_parser.py  institution_extractor.py  jurisdiction_inference.py  logging_config.py  (+14 more)
tests/: test_cik_discovery.py  test_cli.py  test_config.py  test_csv_writer.py  test_descension.py  test_entity_classifucation.py  test_exhibit21_parser.py  test_golden_regression.py  test_institution_extractor.py  test_jurisdiction_inference.py  test_logging_config.py  test_ownership_edges.py  test_ownership_mapper.py  test_parse_filings.py  test_people_extractor.py  test_relationship_builder.py  test_reproducibility.py  test_role_taxonomy.py  test_sc13_parser.py  test_sec_fetch.py  test_state_affiliations.py  test_xbrl_sub.py  testclismoke.py  testgoldenregression.py  testintegrationendtoend.py  testintegrationsc13endto_end.py
(+5 files in other folders)
